Thu Dec 23 14:44:36 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Notify/EventTypeSeq.cpp:

	  A more portable fix for warnings, errors and other compiler
	  oddities.

Wed Dec 22 11:38:23 2004  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/AVStreams/Full_Profile/run_test.pl:
        * orbsvcs/tests/AVStreams/Multicast/run_test.pl:

          The size of the test date file generated was incorrect for all
          platforms.  It assumed a 64KB maximum packet size which is
          incorrect for windows and some additional platforms.

        * orbsvcs/tests/AVStreams/Full_Profile/server.cpp:

          Fixed copy and paste error in error message.

Wed Dec 22 08:10:47 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/FTORB.mpc:

          The FT_ClientORB and FT_ServerORB require interceptors to function
          properly.

        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/GroupRef_Manipulation.mpc:

          The interceptors setting is taken care in the ftclientorb and
          ftserverorb base projects.  So, it is no longer necessary to set
          it here.

Tue Dec 21 12:37:42 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/ImplRepo_Service/Activator_Options.h:
        * orbsvcs/ImplRepo_Service/Activator_Options.cpp:
        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Locator_Options.h:
        * orbsvcs/ImplRepo_Service/Locator_Options.cpp:

          Due to some peculiarity of gcc 2.95.3, I have changed the cmdline
          methods to return const char* instead of const ACE_CString&.  This
          alleviates a core dump.

        * orbsvcs/examples/ImR/Combined_Service/start_all.conf:

          Start the locator on localhost only as that is all that is
          necessary.

Tue Dec 21 09:49:50 2004  Chad Elliott  <elliott_c@ociweb.com>
